# aether-gcs

./: README.md  requirements.txt  requirements_long.txt  simple_swarm_takeoff.py  start_mavros_fleet.sh
ARCHIVE/: aggregator.py
aether_ws/: build_log.txt
aether_ws/install/: local_setup.sh  setup.sh
aether_ws/install/aether_gcs_backend/lib/aether_gcs_backend/: calibration_manager  fleet_manager  mission_planner  mock_intruder  swarm_coordinator
aether_ws/install/aether_gcs_backend/share/aether_gcs_backend/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
aether_ws/install/aether_gcs_backend/share/aether_gcs_backend/config/: drone_profiles.yaml
aether_ws/install/aether_gcs_backend/share/aether_gcs_backend/launch/: gcs_backend.launch.py
aether_ws/install/aether_gcs_logic_cpp/lib/aether_gcs_logic_cpp/: strategic_deconfliction_node
aether_ws/install/aether_gcs_logic_cpp/share/aether_gcs_logic_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
aether_ws/install/aether_gcs_logic_cpp/share/aether_gcs_logic_cpp/cmake/: aether_gcs_logic_cppConfig-version.cmake  aether_gcs_logic_cppConfig.cmake
aether_ws/install/aether_gcs_logic_cpp/share/aether_gcs_logic_cpp/environment/: ament_prefix_path.dsv  path.dsv
aether_ws/install/aether_gcs_logic_cpp/share/ament_index/resource_index/package_run_dependencies/: aether_gcs_logic_cpp
aether_ws/install/aether_gcs_logic_cpp/share/ament_index/resource_index/parent_prefix_path/: aether_gcs_logic_cpp
aether_ws/install/aether_gcs_ui/lib/aether_gcs_ui/: aether_ui  ui
aether_ws/install/aether_gcs_ui/share/aether_gcs_ui/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
aether_ws/install/aether_interfaces/include/aether_interfaces/aether_interfaces/msg/: calibration_status.h  calibration_status.hpp  deconfliction_warning.hpp  fleet_state.h  fleet_state.hpp  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
aether_ws/install/aether_interfaces/include/aether_interfaces/aether_interfaces/srv/: start_calibration.hpp  upload_mission.h
aether_ws/install/aether_interfaces/share/aether_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
aether_ws/install/aether_interfaces/share/aether_interfaces/cmake/: aether_interfacesConfig.cmake  aether_interfaces__rosidl_typesupport_cExport.cmake  aether_interfaces__rosidl_typesupport_cppExport.cmake  aether_interfaces__rosidl_typesupport_introspection_cExport.cmake  aether_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  aether_interfaces__rosidl_typesupport_introspection_cppExport.cmake  ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_aether_interfaces__rosidl_generator_cExport-noconfig.cmake  export_aether_interfaces__rosidl_generator_cExport.cmake  export_aether_interfaces__rosidl_generator_cppExport.cmake  export_aether_interfaces__rosidl_generator_pyExport.cmake  export_aether_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_aether_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_aether_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_aether_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
aether_ws/install/aether_interfaces/share/aether_interfaces/srv/: StartCalibration.idl  StartCalibration_Request.msg  UploadMission.idl  UploadMission.srv  UploadMission_Request.msg  UploadMission_Response.msg
aether_ws/install/aether_interfaces/share/ament_index/resource_index/package_run_dependencies/: aether_interfaces
aether_ws/install/aether_interfaces/share/ament_index/resource_index/parent_prefix_path/: aether_interfaces
aether_ws/install/aether_interfaces/share/ament_index/resource_index/rosidl_interfaces/: aether_interfaces
aether_ws/install/valtec_onboard_intelligence/lib/valtec_onboard_intelligence/: collision_avoider_node
aether_ws/install/valtec_onboard_intelligence/share/valtec_onboard_intelligence/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
aether_ws/install/valtec_onboard_intelligence/share/valtec_onboard_intelligence/cmake/: valtec_onboard_intelligenceConfig-version.cmake  valtec_onboard_intelligenceConfig.cmake
aether_ws/install/valtec_onboard_intelligence/share/valtec_onboard_intelligence/environment/: ament_prefix_path.dsv  path.dsv
aether_ws/install/valtec_onboard_intelligence/share/valtec_onboard_intelligence/launch/: onboard.launch.py
aether_ws/log/: latest_build
aether_ws/src/aether_gcs_backend/: package.xml  setup.cfg  setup.py
aether_ws/src/aether_gcs_backend/aether_gcs_backend/: fleet_manager_node.py  general_fleet_manager.py  mission_planner_node.py  swarm_coordinator_node.py
aether_ws/src/aether_gcs_backend/aether_gcs_backend/nodes/: general_fleet_manager.py
aether_ws/src/aether_gcs_backend/launch/: gcs_backend.launch.py
aether_ws/src/aether_gcs_logic_cpp/: CMakeLists.txt  package.xml
aether_ws/src/aether_gcs_logic_cpp/src/: strategic_deconfliction_node.cpp
aether_ws/src/aether_gcs_ui/: package.xml  setup.cfg  setup.py
aether_ws/src/aether_gcs_ui/aether_gcs_ui/: main_window_node.py
aether_ws/src/aether_interfaces/: CMakeLists.txt  package.xml
aether_ws/src/aether_interfaces/msg/: DeconflictionWarning.msg  FleetState.msg
aether_ws/src/valtec_onboard_intelligence/: CMakeLists.txt
aether_ws/src/valtec_onboard_intelligence/launch/: onboard.launch.py
aether_ws/src/valtec_onboard_intelligence/src/: collision_avoider_node.cpp  strategic_deconfliction_node.cpp
mission_plans/: straight-and-back.plan
(+55 files in other folders)
