<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aether_gcs_backend</name>
  <version>0.0.1</version>
  <description>The backend logic and fleet management for the Aether GCS.</description>
  <maintainer email="sara.magaziotisginori@valtec.ai">Valtec - Sara Magaziotis-Ginori</maintainer>
  <license>Apache-2.0</license>

  <!-- These are the ROS 2 packages your code depends on to run. -->
  <!-- 'rosdep' will use these tags to install the necessary dependencies. -->
  <depend>rclpy</depend>
  <depend>mavros_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>aether_interfaces</depend>

  <!-- These are dependencies only needed for testing. -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
