<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aether_interfaces</name>
  <version>0.0.1</version>
  <description>Custom messages and services for the Aether GCS project.</description>
  <maintainer email="valtec@todo.todo">valtec</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies for generating the interface code -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Execution dependency for using the interfaces at runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- This tag tells the system this is an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 
    THIS IS THE CRITICAL FIX:
    We must declare a dependency on 'std_msgs' because our FleetState.msg
    uses a message (Header) from that package.
  -->
  <depend>std_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

</package>
